<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">SmartRecite</string>
    <string name="wait_for_db_download">请等待数据库下载完成！</string>
    <string name="wait_for_quote_download">请等待名言数据库下载完成！</string>
    <string name="download_db">数据库下载</string>
    <string name="download_quote">名言库下载</string>

    <string name="wrongWords">错词本</string>
    <string name="reviewWords">复习本</string>
    <string name="review">复习</string>
    <string name="setUp">设置</string>

    <string name="openApp">开启单词锁屏</string>
    <string name="wordDifficulty">开锁单词难度</string>
    <string name="lockNumber">需要解锁题的个数</string>
    <string name="serverUrl">服务器地址</string>

    <string name="memorableQuotes">名人名句</string>
    <string name="numberWrongAnswers">答错题数</string>
    <string name="masterWords">掌握单词</string>
    <string name="difficultyLearning">学习难度</string>
    <string name="totalStudy">总共学习</string>

    <string name="mastered">已掌握</string>
    <string name="unlocked">已解锁</string>
    <string name="cet4">四级难度</string>
    <string name="cet6">六级难度</string>
    <string name="serverAddress">请输入服务器地址</string>
    <string name="save">保存</string>
    <string name="user">用户名</string>
    <string name="pwd">密码</string>
    <string name="signIn">登录</string>
    <string name="pull">拉取</string>
    <string name="push">上传</string>
</resources>