<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/memorableQuotes"
        android:textSize="27sp" />


    <TextView
        android:id="@+id/wisdom_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="A watched pot never boils"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/wisdom_china"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="心急喝不了热粥"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/numberWrongAnswers"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/masterWords"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="140dp"
            android:text="@string/difficultyLearning"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="140dp"
            android:layout_marginRight="20dp"
            android:text="@string/totalStudy"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrong_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:text="10"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="27sp" />


        <TextView
            android:id="@+id/difficulty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:text="四级英语"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/already_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200dp"
            android:layout_marginRight="40dp"
            android:text="70"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="27sp" />


        <TextView
            android:id="@+id/already_mastered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="60dp"
            android:layout_marginRight="40dp"
            android:text="40"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="27sp" />

    </RelativeLayout>
</LinearLayout>